docs: added project name

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-# Community Soroban Currencies
-Community Soroban Currencies is an initiative to bring community-driven, trustless currencies to the Soroban blockchain, inspired by the innovative work of [Grassroots Economics](https://www.grassrootseconomics.org). Our goal is to empower communities to create, manage, and transact with their own currency systems with ease, leveraging the security and transparency of blockchain technology while maintaining a user-friendly experience that abstracts away all blockchain components from the user.
+# $GREEN: Soroban Community Currencies
+Soroban Community Currencies is an initiative to bring community-driven, trustless currencies to the Soroban blockchain, inspired by the innovative work of [Grassroots Economics](https://www.grassrootseconomics.org). Our goal is to empower communities to create, manage, and transact with their own currency systems with ease, leveraging the security and transparency of blockchain technology while maintaining a user-friendly experience that abstracts away all blockchain components from the user.
 
 # Project Overview
 Our project enables community members to mint and burn their own tokens using a Primary Automated Market Maker (PAMM) Bonding Curve. With this mechanism, users gain a trusted, algorithmic approach to manage community funds with built-in backing via a bonding curve. This bonding cirve generates fees when minting and burning, which go to a common pool that the community can then allocate to maximise their collective goals. We follow the bonding curve specifications from the BCRG (as per [conding](https://github.com/bonding-curves/conding)) and the [Governance Modules Library by Blockscience](https://medium.com/block-science/launching-an-open-source-library-for-governance-modules-on-soroban-276fc19f966f).
